# FastMCPv2-example

./: .gitignore  CLAUDE.md  README.md  SOLUTION.md  apply_venv_patch.sh  auth.sh  auth0_github_integration.py  auth_provider.py  client.py  demo_oauth_proxy_pattern.py  env.example  fastmcpv2_example.py  github_api.py  local_auth_server.py  mcp_config.json  mcp_keycloak_auth_changes.patch  mcp_server.py  oauth.py  pyproject.toml  run_asgi.sh  run_https.py  simple_client.py  start_mcp_inspector.sh  test_auth0_simulation.py  test_fastmcpv2_example.py  test_local_auth_server.py  test_mcp_server.py  test_mcp_using_claude.sh  test_oauth.py  test_oauth_integration.py  test_user_token_store.py  user_token_store.py
.user_tokens/: mcp_client_o134m5Vn1dlcOho1keWUmg.json
data/: claude_mcp_config.json  venv.patch
docs/: auth0-rfc7591.md  keycloak-rfc7591.md
scripts/: apply_venv_patch.sh  run_asgi.sh  test_mcp_using_claude.sh
src/: auth_provider_factory.py  github_api.py  mcp_server.py
tests/: test_local_auth_server.py  test_mcp_server.py
tls_data/: README.md
