[project]
name = "fastmcpv2-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11.3",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.35.0",
    "fastapi>=0.104.0",
]

[dependency-groups]
dev = [
    "coverage>=7.10.4",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
    "vulture>=2.14",
]

[tool.vulture]
ignore_decorators = ["@mcp.tool", "@mcp.custom_route", "@app.get", "@app.post", "@app.put", "@app.delete", "@app.patch"]
exclude = [".venv"]
ignore_names = ["side_effect"]

